[gd_scene load_steps=8 format=3 uid="uid://cc5mw67n7gjnd"]

[ext_resource type="Script" path="res://src/ui/hud.gd" id="1_m1va2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11yfv"]
bg_color = Color(0, 0, 0, 0.439216)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.298039, 0.886275, 0.996078, 0.529412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuxdm"]
bg_color = Color(0.254902, 0.639216, 0.858824, 0.67451)

[sub_resource type="Theme" id="Theme_3xf6f"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_11yfv")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_xuxdm")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wnyak"]
bg_color = Color(0, 0, 0, 0.588235)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.419608, 0.0627451, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ds11f"]
bg_color = Color(0.454902, 0, 0.00392157, 1)

[sub_resource type="Theme" id="Theme_wvpba"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_wnyak")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_ds11f")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_m1va2")

[node name="ExpProgressBar" type="ProgressBar" parent="."]
offset_left = 32.0
offset_top = 16.0
offset_right = 1105.0
offset_bottom = 43.0
theme = SubResource("Theme_3xf6f")
max_value = 5.0
show_percentage = false

[node name="TimeDisplay" type="Label" parent="."]
offset_left = 570.055
offset_top = 16.7738
offset_right = 611.055
offset_bottom = 42.7738
text = "00:00"

[node name="Timer" type="Timer" parent="TimeDisplay"]
autostart = true

[node name="Level" type="Label" parent="."]
offset_left = 39.0
offset_top = 18.0
offset_right = 117.0
offset_bottom = 41.0
text = "Level: 1"

[node name="HealthPoints" type="ProgressBar" parent="."]
offset_left = 35.0
offset_top = 65.0
offset_right = 187.0
offset_bottom = 77.0
theme = SubResource("Theme_wvpba")
value = 60.0
show_percentage = false

[node name="KillCount" type="Label" parent="."]
offset_left = 967.0
offset_top = 17.0
offset_right = 1069.0
offset_bottom = 40.0
text = "0: Kills"
horizontal_alignment = 2

[connection signal="timeout" from="TimeDisplay/Timer" to="." method="_on_level_time_timer_timeout"]
